force-app/main/default/objects/Time_Entry__c/fields/Active_Driver__c.field-meta.xml
<CustomField>
    <fullName>Active_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Driver</label>
    <referenceTo>Active_Driver__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>