force-app/main/default/objects/Time_Entry__c/fields/Driver_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Driver_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver Assignment</label>
    <referenceTo>Driver_Assignment__c</referenceTo>
    <relationshipName>Driver_Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>