force-app/main/default/objects/Time_Entry__c/fields/Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_Name__c</fullName>
    <formula>Driver_Assignment__r.Driver_formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Name</label>
    <type>Text</type>
</CustomField>