force-app/main/default/objects/Time_Entry__c/fields/Duration_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Minutes__c</fullName>
    <formula>(End_Date_Time__c -  Start_Date_Time__c ) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (in Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>