force-app/main/default/objects/Time_Entry__c/fields/Start_Date_formula__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_formula__c</fullName>
    <formula>DATEVALUE( Start_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>