force-app/main/default/objects/Time_Entry__c/fields/Time_Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Time_Entry_Type__c</fullName>
    <label>Time Entry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rest Break</fullName>
                <default>true</default>
                <label>Rest Break</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>