force-app/main/default/objects/Time_Entry__c/validationRules/TrackBreak_PriorStartTime.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackBreak_PriorStartTime</fullName>
    <active>true</active>
    <description>Rest Break time should not be prior to Start Time.</description>
    <errorConditionFormula>AND(
   OR(ISNEW(),
      ISCHANGED( Start_Date_Time__c )),
   Driver_Assignment__r.Start_Date_Time__c &gt; Start_Date_Time__c,
   ISPICKVAL( Time_Entry_Type__c , &apos;Rest Break&apos;) 
)</errorConditionFormula>
    <errorMessage>Rest Break time should not be prior to Start Time.</errorMessage>
</ValidationRule>