force-app/main/default/objects/Time_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Driver_Assignment__c</columns>
    <columns>Driver_Name__c</columns>
    <columns>Employee__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Total_Minutes_of_Break__c</columns>
    <columns>Billable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>